# flask-nav3

./: .bumpversion.cfg  .gitignore  .nitpick-wtf-style-numpy-no-strict.toml  .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  .safety-policy.yml  CHANGELOG-dev.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  justfile  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: test.yml
docs/: conf.py  index.rst
docs/_templates/: badges.html  github.html  moreinfo.html
docs/pages/: changelog.rst  code.rst
example/: __init__.py
example/bootstrap5/: __init__.py
example/bootstrap5/templates/: index.html
flask_nav3/: __init__.py  app.py  elements.py  renderers.py
tests/: test_flasknav.py
