[tool.poetry]
name = "flask-nav3"
description = "Easily create navigation for Flask applications."
version = "0.7.1-dev9"
license = "MIT"

authors = [
  "Quien Sabe <qs5779@mail.com>",
]

readme = "README.md"


homepage = "https://github.com/wtfo-guru/flask-nav3"
documentation = "https://flask-nav3.readthedocs.io/en/stable"

keywords = []

classifiers = [
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
flask = ">=2.2.2,<4.0.0"
visitor = "^0.1.3"
dominate = "^2.9"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mypy = "^1.8"
wemake-python-styleguide = "^0.18"
flake8-pytest-style = "^1.6"
doc8 = "^1.0"
nitpick = "^0.35"
pytest = ">=7.4,<9.0"
pytest-cov = "^4.0"
pytest-randomly = "^3.12"
isort = "^5.13"
black = ">=23.12,<25.0"
setuptools = "^69.0"
packaging = ">=22,<24"
importlib-metadata = { version = "<5.0", python = "<3.8" }
testfixtures = ">=7.0.4,<9.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=5.2,<8.0"
sphinx-autodoc-typehints = ">=1.24,<3.0"
m2r2 = "^0.3"
tomli = "^2.0"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
