[project]
name = "flask-nav3"
description = "Easily create navigation for Flask applications."
license = "MIT"
keywords = []
version = "0.7.3-dev9"
dynamic = ["classifiers"]
readme = "README.md"
authors = [{name = "Quien Sabe", email = "qs5779@mail.com"}]
requires-python = '>=3.10,<4.0'
dependencies = [
  'flask (>=2.2.2,<4.0.0)',
  'visitor (>=0.1.3,<0.2.0)',
  'dominate (>=2.9,<3.0)'
]

[project.urls]
homepage = "https://github.com/wtfo-guru/flask-nav3"
documentation = "https://flask-nav3.readthedocs.io/en/stable"

[tool.poetry]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
requires-poetry = '>=2.0'

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mypy = "^1.9"
wemake-python-styleguide = "^1.3"
flake8-pytest-style = ">=2.0,<3.0"
doc8 = "^1.0"
pytest = ">=7.4,<9.0"
pytest-cov = "^6.0.0"
pytest-randomly = "^3.12"
isort = "^6.0"
black = "^25.0"
testfixtures = ">=7.0.4,<9.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0"
sphinx-autodoc-typehints = "^3.0"
tomli = "^2.0"
sphinx_mdinclude = "^0.6.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = ".nitpick-wtf-style-numpy-no-strict.toml"
